[workspace]
members = [
    "blink_core",
    "blink_repl",
    "blink_runtime",
    "blink_sclient",
    "blink_socket",
]

resolver = "2"


[workspace.package]
version = "0.1.0"
authors = ["Guðni Garðarsson"]
edition = "2021"
description = "Blink is a lightweight Lisp dialect written in Rust"
repository = "https://github.com/gudnig/blink"
license = "MIT"
keywords = ["lisp", "language", "interpreter", "scripting"]
categories = ["development-tools", "compilers"]