[package]
name = "blink_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core interpreter for the Blink Lisp dialect"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true


[lib]
name = "blink_core"
path = "src/lib.rs"

[dependencies]
parking_lot = "0.12"
rustyline = "15.0.0"
libloading = "0.8"
serde = { version = "1.0", features = ["derive"] }
generational-arena = "0.2"
mmtk = "0.31.0"
tokio = { version = "1.0", features = ["full"] }

