[package]
name = "blink_runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Runtime lib for creating plugins for blink"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true


[dependencies]
blink_core = { version = "0.1.0", path = "../blink_core" }
parking_lot = "0.12"