[package]
name = "blink_sclient"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Socket client for connecting to the socket repl for the Blink Lisp dialect"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true


[dependencies]
tokio = { version = "1.32", features = ["full"] }
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
