[package]
name = "blink_socket"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
blink_core = { path = "../blink_core" }
futures = "0.3"
tokio = { version = "=1.35.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
