[package]
name = "blink_socket"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Socket server with repl and lsp capabilities for the Blink Lisp dialect"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true


[dependencies]
clap = { version = "4.4", features = ["derive"] }
blink_core = { path = "../blink_core" }
futures = "0.3"
tokio = { version = "=1.35.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"
parking_lot = "0.12"
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }

